Meta tags added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,57 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore the portfolio of Vinay Begar, a Frontend developer. Discover innovative projects, creative solutions, and professional expertise."
+    />
+    <meta
+      name="keywords"
+      content="portfolio, Frontend developer, Vinay Begar, projects, creative work, web design, graphic design"
+    />
+    <link rel="icon" type="image/x-icon" href="./images/vinay-3img.jpeg" />
+    <link rel="canonical" href="" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Vinay Begar — Portfolio" />
+    <meta
+      property="og:title"
+      content="Vinay Begar — Frontend Developer & Designer"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio of Vinay Begar — I build responsive, accessible, and performant front-end experiences using HTML, CSS, JavaScript, React and modern tooling."
+    />
+    <meta
+      property="og:url"
+      content="https://vinay-begar-portfolio.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://vinay-begar-portfolio.vercel.app/"
+    />
+    <meta property="og:image:alt" content="Portrait of Vinay Begar" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@vinay_begar" />
+    <meta name="twitter:creator" content="@vinay__begar" />
+    <meta
+      name="twitter:title"
+      content="Vinay Begar — Frontend Developer & Designer"
+    />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Vinay Parit — I build responsive, accessible, and performant front-end experiences using HTML, CSS, JavaScript, React and modern tooling."
+    />
+    <meta
+      name="twitter:image"
+      content="https://vinay-begar-portfolio.vercel.app//images/vinay-img.jpeg"
+    />
+      <title>Portfolio |Vinay Begar</title>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
