--- a/menus/about.html
+++ b/menus/about.html
@@ -2,8 +2,59 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta
+  name="description"
+  content="Learn more about Vinay Begar, a passionate Frontend Developer & Designer dedicated to crafting seamless digital experiences using HTML, CSS, JavaScript, and React."
+/>
+<meta
+  name="keywords"
+  content="About Vinay Begar, Frontend Developer, Web Developer, UI Designer, Portfolio, Web Design, React Developer, JavaScript, CSS, HTML"
+/>
+<link rel="icon" type="image/x-icon" href="../images/vinay-3img.jpeg" />
+<link rel="canonical" href="https://vinay-begar-portfolio.vercel.app/about" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Vinay Begar — Portfolio" />
+<meta
+  property="og:title"
+  content="About Vinay Begar — Frontend Developer & Designer"
+/>
+<meta
+  property="og:description"
+  content="Discover more about Vinay Begar, a creative and detail-oriented Frontend Developer focused on building responsive, accessible, and performant user interfaces."
+/>
+<meta
+  property="og:url"
+  content="https://vinay-begar-portfolio.vercel.app/about"
+/>
+<meta
+  property="og:image"
+  content="https://vinay-begar-portfolio.vercel.app/images/vinay-img.jpeg"
+/>
+<meta property="og:image:alt" content="Portrait of Vinay Begar" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@vinay_begar" />
+<meta name="twitter:creator" content="@vinay__begar" />
+<meta
+  name="twitter:title"
+  content="About Vinay Begar — Frontend Developer & Designer"
+/>
+<meta
+  name="twitter:description"
+  content="Get to know Vinay Begar — a passionate Frontend Developer & Designer crafting interactive and visually appealing digital experiences."
+/>
+<meta
+  name="twitter:image"
+  content="https://vinay-begar-portfolio.vercel.app/images/vinay-img.jpeg"
+/>
+    <title> About| Vinay Begar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
