--- a/menus/work.html
+++ b/menus/work.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Work</title>
+    <meta
+      name="description"
+      content="Browse Vinay Begar's professional projects, case studies, and creative solutions. See how innovative design and development bring ideas to life."
+    />
+    <meta
+      name="keywords"
+      content="projects, portfolio, case studies, work showcase, creative solutions, Frontend developer"
+    />
+
+    <link rel="icon" type="image/x-icon" href="../images/vinay-3img.jpeg" />
+
+    <title>Work| Vinay Begar </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
