Meta tag added in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -39,7 +39,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@vinay_begar" />
-    <meta name="twitter:creator" content="@vinay__begar" />
+    <meta name="twitter:creator" content="@vinay_begar" />
     <meta
       name="twitter:title"
       content="Vinay Begar — Frontend Developer & Designer"
@@ -50,127 +50,133 @@
     />
     <meta
       name="twitter:image"
-      content="https://vinay-begar-portfolio.vercel.app//images/vinay-img.jpeg"
+      content="https://vinay-begar-portfolio.vercel.app/images/vinay-3img.jpeg"
     />
-      <title>Portfolio |Vinay Begar</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet"
-      />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap"
-        rel="stylesheet"
-      />
+    <title>Portfolio |Vinay Begar</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
 
-      <link rel="stylesheet" href="style.css" />
-      <script src="/script.js" defer></script>
-    </head>
-    <body>
-      <div id="loading">
-        <div class="loading-text" id="name-loader">
-          <span data-text="A">V</span>
-          <span data-text="B">I</span>
-          <span data-text="H">N</span>
-          <span data-text="I">A</span>
-          <span data-text="J">Y</span>
-          <span data-text="J">&nbsp; </span>
-          <span data-text="J">B</span>
-          <span data-text="J">E</span>
-          <span data-text="J">G</span>
-          <span data-text="J">A</span>
-          <span data-text="J">R</span>
+    <link rel="stylesheet" href="style.css" />
+    <script src="/script.js" defer></script>
+  </head>
+  <body>
+    <div id="loading">
+      <div class="loading-text" id="name-loader">
+        <span data-text="A">V</span>
+        <span data-text="B">I</span>
+        <span data-text="H">N</span>
+        <span data-text="I">A</span>
+        <span data-text="J">Y</span>
+        <span data-text="J">&nbsp; </span>
+        <span data-text="J">B</span>
+        <span data-text="J">E</span>
+        <span data-text="J">G</span>
+        <span data-text="J">A</span>
+        <span data-text="J">R</span>
+      </div>
+    </div>
+    <!-- Navbar  -->
+    <header class="navbar">
+      <div class="logo">
+        <a href="../index.html" class="heading">Vinay B.</a>
+      </div>
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+        <!-- <span></span> -->
+      </div>
+      <div class="menu" id="nav-menu">
+        <ul class="menu-head">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/menus/about.html">About</a></li>
+          <li><a href="/menus/work.html">Work</a></li>
+          <li class="mobile-btn">
+            <a href="/menus/contact.html" class="btn small mob-reach-out"
+              >Reach out →</a
+            >
+          </li>
+          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
+        </ul>
+      </div>
+      <div class="nav-right">
+        <!-- <span class="available">● available for work</span> -->
+        <a href="./menus/contact.html" class="btn small">Reach out →</a>
+      </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <h1>
+        Frontend Developer<br />
+        & <span class="italic">Creative</span> Coder
+      </h1>
+      <p>
+        I Craft beautiful,interactive web experiences with modern technologies
+        <br class="br" />Passionate about clean code stunning desgins,seamless
+        user experiences
+      </p>
+      <div class="buttons">
+        <a href="/menus/work.html" class="btn light">Check All Works →</a>
+        <!-- <a href="#" class="btn dark">Download my resume ⬇</a> -->
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <p>Desgined and developed by Vinay B.</p>
+        </div>
+
+        <div class="footer-center">
+          <a href="https://github.com/vinay-begar" aria-label="GitHub">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
+              alt="GitHub"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/vinay-begar/"
+            aria-label="LinkedIn"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              alt="LinkedIn"
+            />
+          </a>
+          <a href="https://x.com/vinay_begar" aria-label="Twitter">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
+              alt="Twitter"
+            />
+          </a>
+        </div>
+        <div class="footer-right">
+          <p>© 2025 Vinay B. — All Rights Reserved.</p>
         </div>
       </div>
-      <!-- Navbar  -->
-      <header class="navbar">
-        <div class="logo"><a href="../index.html" class="heading">Vinay B.</a></div>
-        <div class="hamburger" id="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-          <!-- <span></span> -->
-        </div>
-        <div class="menu" id="nav-menu">
-          <ul class="menu-head">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/menus/about.html">About</a></li>
-            <li><a href="/menus/work.html">Work</a></li>
-            <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
-            <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
-          </ul>
-        </div>
-        <div class="nav-right">
-          <!-- <span class="available">● available for work</span> -->
-          <a href="./menus/contact.html" class="btn small ">Reach out →</a>
-        </div>
-      </header>
+    </footer>
 
-      <!-- Hero Section -->
-      <section class="hero">
-        <h1>
-          Frontend Developer<br />
-          & <span class="italic">Creative</span> Coder
-        </h1>
-        <p>
-          I Craft beautiful,interactive web experiences with modern technologies
-          <br class="br">Passionate about clean code stunning desgins,seamless user
-          experiences
-        </p>
-        <div class="buttons">
-          <a href="/menus/work.html" class="btn light">Check All Works →</a>
-          <!-- <a href="#" class="btn dark">Download my resume ⬇</a> -->
-        </div>
-      </section>
-
-      <footer class="footer">
-        <div class="footer-container">
-          <div class="footer-left">
-            <p>Desgined and developed by Vinay B.</p>
-          </div>
-
-          <div class="footer-center">
-            <a href="https://github.com/vinay-begar" aria-label="GitHub">
-              <img
-                src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
-                alt="GitHub"
-              />
-            </a>
-            <a
-              href="https://www.linkedin.com/in/vinay-begar/"
-              aria-label="LinkedIn"
-            >
-              <img
-                src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
-                alt="LinkedIn"
-              />
-            </a>
-            <a href="https://x.com/vinay_begar" aria-label="Twitter">
-              <img
-                src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
-                alt="Twitter"
-              />
-            </a>
-          </div>
-          <div class="footer-right">
-            <p>© 2025 Vinay B. — All Rights Reserved.</p>
-          </div>
-        </div>
-      </footer>
-
-      <div class="mouse-magnet"></div>
-      <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
-        integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      ></script>
-      <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
-        integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      ></script>
-    </body>
-  </html>
+    <div class="mouse-magnet"></div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+      integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
+      integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </body>
+</html>
